ChangeLog for pommed
--------------------

version 1.33:

version 1.32:
	- pommed: add the rivabl sysfs backlight driver for older 12"
	PowerBook G4 laptops. Reported by Nic Boet.

version 1.31:
	- pommed: add IDs for newer wireless keyboard.
	- pommed: add the MacBookPro5,4 (15" June 2009).

version 1.30:
	- pommed: fix a crasher in the i2c probe routine on pmac.
	- pommed: fix sysfs backlight driver to handle > 3-digit values.

version 1.29:
	- pommed: add support for newer nvidia backlight driver which
	changed the sysfs layout.
	- pommed: move VT state checking to pommed, exposed over DBus.
	- gpomme: switch to asking pommed for the state of the VT.
	- wmpomme: switch to asking pommed for the state of the VT.

version 1.28:
	- pommed: added support for the MacBookPro5,3 (15" MacBookPro
	June 2009) 

version 1.27:
	- pommed: added support for the MacBook5,2 (white MacBook).
	- pommed: added support for the MacBookPro5,5 (13" MacBookPro June
	2009), MacBookPro5,2 (17" MacBookPro June 2009).

version 1.26:
	- pommed: only keystrokes on the built-in keyboard should reset
	the keyboard idle timer.
	- pommed: add USB IDs for the Apple external aluminium mini
	keyboard.
	- pommed: switch to sysfs resource files for PCI memory access
	instead of mmaping /dev/mem.

version 1.25:
	- pommed: check current hardware backlight level before setting AC
	or battery level. Do not act if the backlight is off.
	- pommed: do not reject the Apple Bluetooth keyboard because of
	advertised EV_ABS events.
	- pommed: fix DBus configuration snippet for newer, stricter
	version of DBus (allow clients to send messages).

version 1.24:
	- pommed: add new path for fnmode setting for 2.6.28.

version 1.23:
	- pommed: add backlight support for late 2008 laptops.
	- pommed: default to sysfs backlight driver for nVidia machines,
	with the mbp_nvidia_bl kernel driver; fall back to native
	nv8600mgt if not supported.
	- pommed: try to reconnect to DBus if DBus is not available at