@@ -30,7 +30,7 @@ Supported machines:
    * MacBook Core Duo (May 2006)
    * MacBook Core2 Duo (November 2006 & May 2007)
    * MacBook Core2 Duo Santa Rosa (November 2007)
-   * MacBook Core2 Duo (February 2008, October 2008)
+   * MacBook Core2 Duo (February 2008, October 2008, October 2009)
    * MacBook Air Core2 Duo (January 2008, October 2008)
 
 
