@@ -418,6 +418,7 @@ mbp_sysfs_backlight_probe(void)
       case MACHINE_MACBOOKPRO_4:
       case MACHINE_MACBOOKPRO_5:
       case MACHINE_MACBOOK_5:
+      case MACHINE_MACBOOK_6:
       case MACHINE_MACBOOKAIR_2:
 	logmsg(LOG_INFO, "sysfs backlight probe failed, falling back to nv8600mgt");
 
